--- a/static/view/home.html
+++ b/static/view/home.html
@@ -112,7 +112,7 @@
         for (var i = 0; i < data.length; i++) {
           var x = document.getElementById('filetbl').insertRow();
           var cell = x.insertCell();
-          cell.innerHTML = data[i].FileHash.substr(0, 20)+"...";
+          cell.innerHTML = data[i].FileSha1.substr(0, 20)+"...";
 
           cell = x.insertCell();
           cell.innerHTML = data[i].FileName;
@@ -124,7 +124,7 @@
           cell.innerHTML = data[i].UploadAt;
 
           cell = x.insertCell();
-          cell.innerHTML = data[i].LastUpdated;
+          cell.innerHTML = data[i].LastUpdate;
 
           cell = x.insertCell();
           cell.innerHTML = '<button class="btn btn-success" ' +
